# python-better-sum

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  we-have-tox-at-home.sh
.github/workflows/: pyright.yaml  pytest.yaml
better_sum/: __init__.py
docs/: _common_links.md  api.md  contributing.md  index.md  usage.md  why.md
tests/: conftest.py  helpers.py
tests/helpers/: __init__.py
tests/unit/: test_sum.py  test_sum_starts_at_instance_decorator.py
