[project]
name = "better-sum"
version = "0.1.1"
readme = "README.md"
description = "Python's sum, minus ugly annotations and extra arguments."
keywords = [
    'sum',  'built-ins', 'replacement',
    'typing', 'types', 'type-sensitive',
    'default', 'defaults', 'decorator'
]
authors = [
    {name="pushfoo"}
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
        'typing-extensions==4.11.0; python_version < "3.11"',
]

classifiers=[
        "Development Status :: 3 - Alpha",

        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Typing :: Typed",

        "License :: OSI Approved",
        "License :: OSI Approved :: BSD License",

        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/pushfoo/python-better-sum"
Documentation = "https://better-sum.readthedocs.io/en/latest"
Issues = "https://github.com/pushfoo/python-better-sum/issues"
Source = "https://github.com/pushfoo/python-better-sum"

[project.optional-dependencies]
dev = [
    'mkdocs==1.6.0',
    'mkautodoc==0.2.0',
    'mkdocstrings[python]==0.25.1',
    'pygments==2.18.0',  # Pre-rendered code highlighting
    'pytest==8.2.2'
]

[tool.setuptools.packages.find]
include = ["better_sum", "better_sum.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = ["docs", ".venv", "env", "dist"]

[tool.portray]
modules = ["better_sum"]
docs_dir = "docs"
